[package]
name = "khaiii-rs"
version = "0.4.0"
authors = ["Jordy Ruiter <jordy@kaiwa-projects.com>"]
license = "Apache-2.0"
keywords = ["khaiii"]
repository = "https://github.com/ka1wa/khaiii-rs"
description = "Bindings to Kakao Hangul Analyzer III (khaiii) for parsing and analyzing Korean text."
categories = ["api-bindings"]
edition = "2021"

[dependencies]
khaiii-sys = { path = "khaiii-sys", version = "0.4.0" }

[features]
vendored-khaiii = ["khaiii-sys/vendored"]
