[package]
name = "khaiii-rs"
version = "0.1.3"
authors = ["Jordy Ruiter <jordy@kaiwa-projects.com>"]
license = "Apache-2.0"
keywords = ["khaiii", "korean"]
categories = ["api-bindings"]
repository = "https://github.com/ka1wa/khaiii-rs"
documentation = "https://docs.rs/khaiii-rs"
description = "Bindings to Kakao Hangul Analyzer III (khaiii) for parsing and analyzing Korean text."
edition = "2021"

[dependencies]
khaiii-sys = { path = "khaiii-sys", version = "0.1.0+0.4" }

[features]
vendored-khaiii = ["khaiii-sys/vendored"]

[package.metadata.docs.rs]
features = ["vendored-khaiii"]
