[package]
name = "khaiii-rs"
version = "0.1.4"
authors = ["Jordy Ruiter <jordy@kaiwa-projects.com>"]
license = "Apache-2.0"
keywords = ["khaiii", "korean"]
categories = ["api-bindings"]
repository = "https://github.com/ka1wa/khaiii-rs"
documentation = "https://docs.rs/khaiii-rs"
description = "Bindings to Kakao Hangul Analyzer III (khaiii) for parsing and analyzing Korean text."
edition = "2021"

[dependencies]
khaiii-sys = { path = "khaiii-sys", version = "0.1.0+0.4" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.68", optional = true }

[features]
vendored-khaiii = ["khaiii-sys/vendored"]
serde_support = ["serde", "serde_json"]

[package.metadata.docs.rs]
features = ["vendored-khaiii"]
