[package]
name = "khaiii-sys"
version = "0.1.0+0.4"
authors = ["Jordy Ruiter <jordy@kaiwa-projects.com>"]
links = "khaiii"
build = "build.rs"
repository = "https://github.com/ka1wa/khaiii-rs"
documentation = "https://docs.rs/khaiii-rs"
description = "Native bindings to the khaiii library"
license = "Apache-2.0"
edition = "2021"
exclude = [
    "khaiii/*",
]

[lib]
name = "khaiii_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.62.0"
regex = "1.7.0"
fs_extra = "1.2.0"

[features]
vendored = []
